# SigFigFloat

./: README.md  pyproject.toml
src/sigfigfloat/: __init__.py
tests/: test_comp.py
