[project]
name = "sigfigfloat"
version = "0.1.0"
description = "Wrapper for Python float that limits significant-digits"
authors = [
    {name = "kieran hervold",email = "hervold@gmail.com"}
]
license = {text = "GPL 3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
